# Code2MARKDOWN

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  BUG_FIXES_REPORT_v1.2.1.md  BUG_FIXES_REPORT_v1.2.2.md  CHANGELOG.md  CLEANUP_REPORT.md  DEAD_CODE_CLEANUP_REPORT.md  DOCKER_README.md  DOWNLOAD_GUIDE.md  Dockerfile  FILTER_INTEGRATION_REPORT.md  FIX_MAX_DEPTH_ERROR.md  FIX_SELECT_ALL_ISSUE.md  FIX_SELECT_ALL_ISSUE_v2.md  GEMINI.md  IMPLEMENTATION_REPORT_v1.2.0.md  IMPROVEMENTS_REPORT_v1.2.3.md  IMPROVEMENT_PLAN.md  INTERACTIVE_SELECTION_GUIDE.md  MAINTENANCE.md  PERFORMANCE_OPTIMIZATION_REPORT.md  PROJECT_QUALITY_ALIGNMENT_REPORT.md  README.md  app.py  code2markdown.db  docker-compose.yml  main.py  pyproject.toml  requirements.txt  requirements_minimal.txt  requirements_new.txt  setup.bat  start.bat  start.sh  test_download.py  test_filter_debug.py  test_service_debug.py
.github/: copilot-instructions.md
.roo/rules/: 01-quality_guideline.md
.specstory/: .gitignore
.specstory/ai_rules_backups/: copilot-instructions.md.2025-07-22T00-06-36-266Z  copilot-instructions.md.2025-07-22T17-19-53-751Z
.specstory/history/: 2025-06-10_14-38+0300-project-analysis-and-repository-synchronization-steps.md
doc/dev/: 03-cycle-check-guideline.md  documentation-maintenance.md  gap.md  parser_script.py  raw.md  refactoring.md  requirements.md  roadmap.md  sprint-plan.md  todo.md  usage_scenarios.md
logseq/: config.edn
pages/: @code.md  DEPLOYMENT_PLAN.md  Development-Scripts-Improvement.md  EPIC-DEV.md  LEARNING-1.md  Phase-X.md  REQ-DEV-3.md  STORY-API-16.md  STORY-DEV-1.md  STORY-DEV-2.md  STORY-DEV-3.md  STORY-E2E-1.md  STORY-E2E-2.md  STORY-E2E-3.md  STORY-E2E-4.md  STORY-E2E-5.md  api.md  backlog.md  caching-strategy.md  commands.analyze-code-quality.md  commands.audit-and-sync-kb.md  commands.check-kb-integrity.md  commands.deploy-to-staging.md  commands.extract-phase-learnings.md  commands.handle-unplanned-task.md  commands.initiate-development-phase.md  commands.plan-next-phase.md  commands.retrospective-and-close-phase.md  commands.run-pre-release-qa-suite.md  commands.start-development-cycle.md  learning.md  positive.md  product.vision.md  requirements.md  roadmap.md  rules.00-IMPORTENT.md  rules.01-quality-guideline.md  rules.02-scripts-structure.md  rules.03-e2e-tests-guidline.md  rules.04-filename-referencing-rules.md  (+4 more)
scripts/: check_cycles.py
scripts/development/: README.md  __init__.py  __main__.py  analyze_architecture.py  example_with_log_analysis.py  generate_logseq_config.py  log_analysis_protocol.md  log_analyzer.py  parser_script.py  sync_git_kb.py  utils.py  validate_kb.py
scripts/development/archive/: README.md  fix_escaped_chars.py  fix_escaped_chars_v2.py  fix_mocks.py  update_imports.py
src/: __init__.py
src/code2markdown/: __init__.py  app.py
src/code2markdown/application/: repository.py  services.py
src/code2markdown/domain/: chat_parser.py  files.py  filters.py  request.py
src/code2markdown/infrastructure/: database.py
templates/temp/: clean-up-code.md  default_template.md  fix-bugs.md  improve-performance.md
test_project/: .gitignore  README.md  main.py
test_project/docs/: README.md  api.md
test_project/memory-bank/: agent_config.md  memory_manager.py
test_project/should_exclude/: excluded_file.py
tests/code2markdown/: test_app_parser.py  test_app_ui.py  test_domain_files.py  test_download.py  test_filter_integration.py  test_fixes.py  test_generation_service.py  test_generation_service.py.bak  test_generation_service.py.bak2  test_infrastructure_database.py  test_new_features.py  test_simple.py
tests/code2markdown/application/: test_application_repository.py
tests/code2markdown/domain/: test_chat_parser.py  (+2 more)
tests/development/: README.md  __init__.py  conftest.py  test_generate_logseq_config.py  test_validate_kb.py
tests/e2e/: README.md  __init__.py  conftest.py  test_critical_flows.py
tests/performance/: performance_test.py
(+11 files in other folders)
