[project]
name = "code2markdown"
version = "1.3.1"
description = "A powerful Streamlit-based web application that generates structured Markdown documentation from your project's source code with interactive file selection and advanced filtering options."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.38.0",
    "pybars3>=0.9.7",
    "pathspec>=0.12.1",
    "pyperclip>=1.9.0",
    "pandas>=2.2.3",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["code2markdown*"]
namespaces = false

[project.scripts]
test = "pytest:main"
test-cov = "pytest:main"
dead-code = "vulture:main"
audit = "pip_audit:main"
check-cycles = "scripts.development.analyze_architecture:main"

[tool.ruff]
line-length = 90
[tool.ruff.lint]
select = ["F","E","W","I","UP","B","BLE"]
ignore = ["E501"]
[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]
cache_dir = "tmp_cache"
# Coverage configuration
addopts = "--cov=src --cov=scripts --cov-report=xml --cov-report=term-missing --cov-report=html"

# Development scripts specific test markers
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "development_scripts: marks tests for development scripts",
    "utils: marks tests for utils module",
    "parser: marks tests for parser module",
    "validator: marks tests for validator module",
    "log_analyzer: marks tests for log analyzer module",
    "config_generator: marks tests for config generator module",
]

[tool.mypy]
# Игнорировать отсутствие stub-файлов для указанных модулей
ignore_missing_imports = true
# Можно также явно указать модули, если не хотим игнорировать все
# [[tool.mypy.overrides]]
# module = ["pybars", "pyperclip"]
# ignore_missing_imports = true

# Проверять тела функций без аннотаций типов
check_untyped_defs = true

# Показывать заметки (notes)
show_error_codes = true

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-cov>=6.2.1",
    "mypy>=1.13.0",
    "coverage>=7.10.2",
    "pip-audit>=2.9.0",
    "vulture>=2.14",
    "pydeps>=1.9.13",
    "pytest-playwright>=0.7.1",
]
